# winding

./: .gitignore  .gitmodules
firmware/: .clang-format  .mxproject  CMakeLists.txt  STM32F407VETx_FLASH.ld  winding.ioc
firmware/App/Inc/: app_cnc.h  app_log.h  app_main.h
firmware/App/Src/: app_cnc.cpp  app_log.cpp  app_main.cpp
firmware/Core/Src/: main.c
firmware/Lib/: CMakeLists.txt
firmware/Lib/Inc/: rdnx_atomic.h  rdnx_bkpsram.h  rdnx_bootloader.h  rdnx_byteorder.h  rdnx_clock.h  rdnx_event.h  rdnx_flash.h  rdnx_list_gen.h  rdnx_macro.h  rdnx_mempool.h  rdnx_nvram.h  rdnx_platform.h  rdnx_queue.h  rdnx_ring.h  rdnx_sal.h  rdnx_slist.h  rdnx_types.h  rdnx_util.h  rdnx_wdg.h  yaa_bkpsram.h  yaa_bootloader.h  yaa_byteorder.h  yaa_clock.h  yaa_event.h  yaa_flash.h  yaa_list_gen.h  yaa_macro.h  yaa_mempool.h  yaa_nvram.h  yaa_platform.h  yaa_queue.h  yaa_ring.h  yaa_sal.h  yaa_slist.h  yaa_types.h  yaa_util.h  yaa_wdg.h
firmware/Lib/Inc/adc/: ade7758.h  ltc2946.h
firmware/Lib/Inc/drivers/i2c/: rdnx_pca9547.h  yaa_pca9547.h
firmware/Lib/Inc/hal/: rdnx_adc.h  rdnx_can.h  rdnx_gpio.h  rdnx_i2c.h  rdnx_spi.h  rdnx_timer.h  rdnx_usart.h  yaa_adc.h  yaa_can.h  yaa_gpio.h  yaa_i2c.h  yaa_spi.h  yaa_usart.h
firmware/Lib/Inc/network/: rdnx_ip.h  rdnx_socket.h  yaa_ip.h  yaa_socket.h
firmware/Lib/Inc/network/ethernet/: rdnx_eth.h  w5500.h  w5500_regs.h  yaa_eth.h
firmware/Lib/Inc/network/proto/: rdnx_tftp.h  yaa_tftp.h
firmware/Lib/Inc/onewire/: ds2430.h  ds2482.h  one_wire.h
firmware/Lib/Inc/rtt/: rdnx_rtt.h  yaa_rtt.h
firmware/Lib/Inc/sensor/: rdnx_temperature.h  yaa_temperature.h
firmware/Lib/Inc/sensor/temperature/: rdnx_stm32_temp.h  yaa_stm32_temp.h
firmware/Lib/Src/: rdnx_alloc.c  rdnx_bkpsram.c  rdnx_bootloader.c  rdnx_clock.c  rdnx_event.c  rdnx_flash.c  rdnx_hal.c  rdnx_hardfault.c  rdnx_mempool.c  rdnx_platform.c  rdnx_platform_ctx.h  rdnx_queue.c  rdnx_ring.c  rdnx_sal.c  rdnx_time.c  rdnx_util.c  rdnx_wdg.c  yaa_bkpsram.c  yaa_bootloader.c  yaa_clock.c  yaa_event.c  yaa_flash.c  yaa_hal.c  yaa_hardfault.c  yaa_mempool.c  yaa_platform.c  yaa_platform_ctx.h  yaa_queue.c  yaa_ring.c  yaa_sal.c  yaa_time.c  yaa_util.c  yaa_wdg.c
firmware/Lib/Src/adc/: ade7758.c  ltc2946.c
firmware/Lib/Src/drivers/: CMakeLists.txt
firmware/Lib/Src/drivers/i2c/: rdnx_pca9547.c  yaa_pca9547.c
firmware/Lib/Src/hal/: rdnx_can.c  rdnx_gpio.c  rdnx_i2c.c  rdnx_spi.c  rdnx_timer.c  rdnx_timer_LL.c  yaa_can.c  yaa_gpio.c  yaa_i2c.c  yaa_spi.c
firmware/Lib/Src/network/: CMakeLists.txt  rdnx_socket.c  rdnx_socket_backend.h  yaa_socket.c  yaa_socket_backend.h
firmware/Lib/Src/network/ethernet/: w5500.c  w5500_internal.h  w5500_socket.c  w5500_socket_backend.c
firmware/Lib/Src/network/proto/tftp/: CMakeLists.txt  rdnx_tftp.c  yaa_tftp.c
firmware/Lib/Src/nvram/: CMakeLists.txt  entry.c  entry.h  map.c  map.h  rdnx_nvram.c  rdnx_nvram_internal.h  storage.c  storage.h  yaa_nvram.c  yaa_nvram_internal.h
firmware/Lib/Src/nvram_kved/: CMakeLists.txt  rdnx_nvram.c  yaa_nvram.c
firmware/Lib/Src/nvram_kved/kved/: kved.c  kved_flash.h
firmware/Lib/Src/nvram_kved/kved/docs/: globals_defs.html  kved__cpu_8h_source.html
firmware/Lib/Src/nvram_kved/kved/port/stm32f4/: port_flash.c
firmware/Lib/Src/onewire/: ds2430.c  ds2482.c
firmware/Lib/Src/rtt/: CMakeLists.txt  rdnx_rtt.c  yaa_rtt.c
firmware/Lib/Src/sensor/: CMakeLists.txt  rdnx_temperature.c  yaa_temperature.c
firmware/Lib/Src/sensor/temperature/: rdnx_stm32_temp.c  yaa_stm32_temp.c
firmware/cmake/: target_arch.cmake
